--- a/public/postItem.html
+++ b/public/postItem.html
@@ -2,220 +2,281 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Lost Item Form - Dark Neon Theme</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-        crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
 
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
-        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  <style>
+    /* Body with smooth dark gray to black gradient */
+    body {
+      min-height: 100vh;
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(120deg, #2c2c2c, #1a1a1a, #000000);
+      background-size: 600% 600%;
+      animation: gradientFlow 30s ease infinite;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px;
+      color: #fff;
+      overflow: auto; /* allow scrolling */
+      position: relative;
+    }
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.min.js"
-        integrity="sha384-7qAoOXltbVP82dhxHAUje59V5r2YsVfBafyUDxEdApLPmcdhBPg1DKg1ERo0BZlK"
-        crossorigin="anonymous"></script>
+    @keyframes gradientFlow {
+      0% { background-position: 0% 50%; }
+      25% { background-position: 50% 50%; }
+      50% { background-position: 100% 50%; }
+      75% { background-position: 50% 50%; }
+      100% { background-position: 0% 50%; }
+    }
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    /* Floating soft lights */
+    .floating-light {
+      position: absolute;
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      background: rgba(255, 255, 255, 0.05);
+      filter: blur(80px);
+      animation: floatMove 25s linear infinite;
+      z-index: 0;
+    }
 
+    .floating-light:nth-child(1) { top: 10%; left: 5%; animation-delay: 0s; }
+    .floating-light:nth-child(2) { top: 50%; left: 70%; animation-delay: 5s; }
+    .floating-light:nth-child(3) { top: 80%; left: 30%; animation-delay: 10s; }
 
-    <style>
-        body {
+    @keyframes floatMove {
+      0% { transform: translate(0, 0) scale(1); }
+      50% { transform: translate(50px, -50px) scale(1.1); }
+      100% { transform: translate(0, 0) scale(1); }
+    }
 
-            background: linear-gradient(135deg, #f0f4f8, #d9e4f5);
-        }
+    /* Glassy overlay for the entire body */
+    .body-glass {
+      position: fixed; /* fixed so it stays behind content */
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(255, 255, 255, 0.05);
+      backdrop-filter: blur(16px);
+      -webkit-backdrop-filter: blur(16px);
+      z-index: -1; /* behind content */
+    }
 
+    /* Header with logo */
+    header {
+      width: 100%;
+      max-width: 900px;
+      display: flex;
+      align-items: center;
+      padding: 15px 25px;
+      background: rgba(255, 255, 255, 0.05);
+      backdrop-filter: blur(16px);
+      border-radius: 20px;
+      box-shadow: 0 0 40px rgba(0, 240, 255, 0.2), 0 0 60px rgba(255, 0, 128, 0.2);
+      margin-bottom: 30px;
+      border: 1px solid rgba(0, 240, 255, 0.3);
+      position: relative;
+      z-index: 1;
+    }
 
-        .form-control {
-            border: 1px solid black;
-            border-radius: 2px;
-        }
+    header img {
+      height: 50px;
+      width: 50px;
+      border-radius: 50%;
+      margin-right: 15px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      box-shadow: 0 2px 10px rgba(0, 240, 255, 0.3);
+    }
 
-        form input.form-control,
-        form select.form-select,
-        form textarea.form-control {
-            border: 1px solid #ccc;
-            border-radius: 6px;
-        }
+    header img:hover {
+      transform: scale(1.1);
+      box-shadow: 0 0 15px rgba(0, 240, 255, 0.6);
+    }
 
-        form input.form-control:focus,
-        form select.form-select:focus,
-        form textarea.form-control:focus {
-            border-color: #5b86e5;
-            box-shadow: 0 0 6px rgba(91, 134, 229, 0.4);
-            background-color: #fff;
-            color: #111;
-            outline: none;
-        }
+    header h1 {
+      font-size: 1.8rem;
+      color: #fff;
+      margin: 0;
+      text-shadow: 0 1px 5px rgba(0, 0, 0, 0.7);
+    }
 
-        form label {
-            color: black;
-            font-weight: 500;
-        }
-    </style>
+    /* Glassy neon form container */
+    .glass-form {
+      background: rgba(255, 255, 255, 0.05);
+      backdrop-filter: blur(20px);
+      border-radius: 20px;
+      padding: 40px 30px;
+      width: 100%;
+      max-width: 900px;
+      box-shadow: 0 0 40px rgba(0, 240, 255, 0.2), 0 0 60px rgba(255, 0, 128, 0.2);
+      color: #fff;
+      position: relative;
+      z-index: 1;
+      text-align: center;
+      animation: fadeScaleIn 1s forwards;
+      transform: scale(0.95);
+      opacity: 0;
+    }
 
+    @keyframes fadeScaleIn {
+      to { transform: scale(1); opacity: 1; }
+    }
 
-    <script>
+    /* Input box styling */
+    .glass-form input,
+    .glass-form select,
+    .glass-form textarea {
+      width: 100%;
+      padding: 10px 15px;
+      margin: 10px 0;
+      border-radius: 8px;
+      border: 1px solid rgba(255,255,255,0.3);
+      background: rgba(255,255,255,0.1);
+      color: #fff;
+      outline: none;
+      transition: 0.3s;
+    }
 
-           function showPrev(picupload, picurl) {
-            const [file] = picupload.files
-            if (file) {
-                picurl.src = URL.createObjectURL(file)
-            }
-        }
+    .glass-form input:focus,
+    .glass-form select:focus,
+    .glass-form textarea:focus {
+      background: rgba(255,255,255,0.15);
+      border-color: #00f0ff;
+      box-shadow: 0 0 10px #00f0ff;
+    }
 
-        $(document).ready(function () {
-            $("#emailid").blur(function () {
-                let email = $(this).val().trim();
-                let regex = /^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$/;
-                if (email === "") {
-                    alert("fill Email Id");
+    .glass-form label {
+      color: #fff;
+      font-weight: 500;
+    }
 
-                }
-                else if (regex.test(email) == false) {
-                    alert("Invalid Email Id");
+    /* Neon gradient button */
+    .glass-form button {
+      width: 100%;
+      padding: 10px 15px;
+      margin-top: 15px;
+      border: none;
+      border-radius: 8px;
+      background: linear-gradient(45deg, #ff0080, #7928ca, #00f0ff);
+      background-size: 200% 200%;
+      color: #fff;
+      font-weight: 600;
+      cursor: pointer;
+      transition: 0.5s;
+    }
 
-                }
-            })
+    .glass-form button:hover {
+      background-position: right center;
+      box-shadow: 0 0 20px rgba(0, 240, 255, 0.5), 0 0 20px rgba(255, 0, 128, 0.5);
+    }
 
-            $("#pub_item").click(function () {
-                let obj = {
-                    type: "post",
-                    url: "/Post_item",
-                    data: {
-                        emailid: $("#emailid").val(),
-                        itemname: $("#itemName").val(),
-                        date: $("#date").val(),
-                        location: $("#location").val(),
-                        time: $("#time").val(),
-                        contact: $("#contact").val(),
-                        otherinfo: $("#otherinfo").val(),
+    #picurl2 { max-width: 100%; border-radius: 12px; margin-top: 10px; }
 
+    footer {
+      width: 100%;
+      text-align: center;
+      padding: 15px 0;
+      margin-top: 30px;
+      color: #fff;
+      font-size: 0.9rem;
+      position: relative;
+      z-index: 1;
+    }
 
-                    }
-                }
-                $.ajax(obj).then(function (response) {
-                    alert(response);
-                }).fail(function (err) {
-                    alert(err);
-                })
-            })
-        })
-    </script>
-    <script>
-        function showUser() {
-            let activeUser = localStorage.getItem("activeUser");
-            document.getElementById("emailid").value = activeUser;
-        }
-    </script>
-
+    @media (max-width: 768px) {
+      .glass-form { padding: 20px; }
+      header { padding: 10px 15px; }
+      header h1 { font-size: 1.4rem; }
+      header img { height: 40px; width: 40px; }
+    }
+  </style>
 </head>
 
-<body onload=showUser()>
+<body>
+  <div class="body-glass"></div>
 
-    <div class="container mx-auto" style="width: 70%;">
+  <!-- Floating soft lights -->
+  <div class="floating-light"></div>
+  <div class="floating-light"></div>
+  <div class="floating-light"></div>
 
-        <form class="row g-3 m-2 p-3 needs-validation border-top-0 rounded-bottom shadow-sm"
-            enctype="multipart/form-data" style=" background-color: #ffffff;
-            color: black;
-            border-radius: 12px; ">
+  <!-- Header with Logo -->
+  <header>
+    <img src="heckathon/logo.png" alt="Website Logo" />
+    <h1>College Lost & Found</h1>
+  </header>
 
-            <div class="col-12 text-center mb-3">
-                <h4 style="
-                font-weight: 600;
-                letter-spacing: 0.8px;
-                margin-bottom: 0;">
-                    LOST ITEM DETAILS
-                </h4>
-                <hr style="width: 50px; border-top: 2px solid black; margin: 8px auto 0;">
-            </div>
+  <!-- Glassy neon container for lost item details -->
+  <div class="container mx-auto glass-form">
+    <form class="row g-3 m-2 p-3 needs-validation">
+      <div class="col-12 text-center mb-3">
+        <h4 style="font-weight: 600; letter-spacing: 0.8px; margin-bottom: 0;">LOST ITEM DETAILS</h4>
+        <hr style="width: 50px; border-top: 2px solid #00f0ff; margin: 8px auto 0;" />
+      </div>
 
-            <input type="hidden" id="hdn" name="hdn">
+      <div class="col-8 md-3">
+        <label class="form-label">Item Name:</label>
+        <input type="text" class="form-control" id="ItemName" name="ItemName" required />
+      </div>
 
+      <div class="col-4 md-3">
+        <label class="form-label">Date:</label>
+        <input type="date" class="form-control" id="date" name="date" required />
+      </div>
 
+      <div class="col-md-6">
+        <label class="form-label">Time:</label>
+        <input type="time" class="form-control" id="time" name="time" required />
+      </div>
 
-            <br>
-            <div class=" col-8 md-3">
-                <label class="form-label">Item Name:</label>
-                <input type="text" class="form-control" id="ItemName" name="ItemName" required>
+      <div class="col-md-6">
+        <label class="form-label">Found Location:</label>
+        <input type="text" class="form-control" id="location" name="location" required />
+      </div>
 
-            </div>
-            <br>
-            <div class=" col-4 md-3">
-                <label class="form-label">Date:</label>
-                <input type="date" class="form-control" id="date" name="date" required>
+      <div class="col-6 md-3 p-1">
+        <label class="form-label">Contact No.</label>
+        <input type="number" class="form-control" id="contact" name="contact" required />
+      </div>
 
-            </div>
+      <div class="col-6 md-5 p-3">
+        <label class="form-label">Upload Profile Pic:</label>
+        <input type="file" class="form-control" id="pic_upload" name="pic_upload" />
+      </div>
 
-            <div class="col-md-6">
-                <label class="form-label">Time:</label>
-                <input type="time" class="form-control" id="time" name="time" placeholder="" required>
+      <div class="col-2 p-3">
+        <img src="heckathon/logo.png" alt="upload pic" id="picurl2" class="img-fluid rounded" />
+      </div>
 
-            </div>
+      <div class="row p-1">
+        <div class="col-md-12">
+          <label for="otherinfo" class="form-label">Other Info:</label>
+          <textarea class="form-control" id="otherinfo" rows="6" name="otherinfo"></textarea>
+        </div>
+      </div>
 
-            <div class="col-md-6">
-                <label class="form-label">found location:</label>
-                <input type="text" class="form-control" id="location" name="location" required>
+      <div class="col-12">
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="gridCheck" />
+          <label class="form-check-label" for="gridCheck">Check me out</label>
+        </div>
+      </div>
 
-            </div>
+      <div class="col-12">
+        <button type="button" class="btn">Publish Item</button>
+      </div>
+    </form>
+  </div>
 
-
-
-
-            <div class=" col-6 md-3 p-1">
-                <label class="form-label">Contact No.</label>
-                <input type="number" class="form-control" id="contact" name="contact" required>
-
-            </div>
-
-
-
-
-
-            <!-- pic----------------------------------------------------- -->
-
-            <div class=" col-6 md-5 p-5">
-                <label class="form-label">Upload Profile Pic:</label>
-                <input type="file" class="form-control" id="pic_upload" name="pic_upload"
-                    onchange="showPrev(pic_upload,picurl2)">
-            </div>
-
-             <div class=" col-2 p-3">
-                <img src="heckathon/logo.png" alt="upload pic" id="picurl2" class="img-fluid rounded">
-            </div>
-            <!-- -------------------------------------------------------- -->
-
-            <div class="row p-1">
-                <div class="col-md-12">
-                    <label for="otherinfo" class="form-label">Other Info:</label>
-                    <textarea class="form-control" id="otherinfo" rows="6" name="otherinfo"></textarea>
-                </div>
-            </div>
-
-
-            <div class="col-12">
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="gridCheck">
-                    <label class="form-check-label" for="gridCheck">
-                        Check me out
-                    </label>
-                </div>
-            </div>
-
-            <div class="col-12">
-                <button type="button" class="btn btn-dark" id="pub_item" name="pub_item">Publish Item</button>
-
-            </div>
-
-        </form>
-    </div>
-
+  <footer>© 2025 College Lost & Found | Designed with ❤️</footer>
 </body>
 
 </html>
